fix: fixed RAG service logic.